--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
+    "leva": "^0.9.20",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
     "three": "^0.137.5",
-    "web-vitals": "^2.1.4"
+    "three-stdlib": "^2.8.6",
+    "web-vitals": "^2.1.4",
+    "zustand": "^3.7.0"
   },
   "scripts": {
     "start": "react-scripts start",
