--- a/package.json
+++ b/package.json
@@ -42,5 +42,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "r3f-perf": "^4.9.1"
   }
 }
